--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 
         <!-- 🔹 이메일 문의 & 전화 문의 추가 -->
         <div class="app-support">
-            📩 이메일 문의: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a><br>
-            📞 전화 문의: <a href="tel:0123456789">012-345-6789</a>
+            📩 이메일 문의: <a href="mailto:support@yourdomain.com">dogehj191223@gmail.com</a><br>
+            📞 전화 문의: <a href="tel:0123456789">010-7741-8774</a>
         </div>
         
         <div id="contentPreview" class="content-preview">
